# F1-Telemetry

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  api.py  app.py  docker-compose.yml  ingest_fastf1.py  main.py  preload_all.py  process_data.py  pyproject.toml  requirements.txt  train_model.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
f1-frontend/: README.md  package-lock.json  package.json
f1-frontend/app/: globals.css  layout.tsx  page.tsx
feature_store/lap_times/: monaco_2023_race_pace.parquet
feature_store/telemetry/: Baku_2024_ALO_fastest.parquet  Baku_2024_HAM_fastest.parquet  Baku_2024_LEC_fastest.parquet  Baku_2024_NOR_fastest.parquet  Baku_2024_OCO_fastest.parquet  Baku_2024_PER_fastest.parquet  Baku_2024_PIA_fastest.parquet  Baku_2024_RUS_fastest.parquet  Baku_2024_SAI_fastest.parquet  Baku_2024_VER_fastest.parquet  Barcelona_2023_NOR_fastest.parquet  Barcelona_2024_ALB_fastest.parquet  Barcelona_2024_ALO_fastest.parquet  Barcelona_2024_BOT_fastest.parquet  Barcelona_2024_HAM_fastest.parquet  Barcelona_2024_HUL_fastest.parquet  Barcelona_2024_LEC_fastest.parquet  Barcelona_2024_MAG_fastest.parquet  Barcelona_2024_NOR_fastest.parquet  Barcelona_2024_OCO_fastest.parquet  Barcelona_2024_PER_fastest.parquet  Barcelona_2024_PIA_fastest.parquet  Barcelona_2024_RUS_fastest.parquet  Barcelona_2024_SAI_fastest.parquet  Barcelona_2024_SAR_fastest.parquet  Barcelona_2024_STR_fastest.parquet  Barcelona_2024_TSU_fastest.parquet  Barcelona_2024_VER_fastest.parquet  Barcelona_2024_ZHO_fastest.parquet  Budapest_2024_ALB_fastest.parquet  Budapest_2024_ALO_fastest.parquet  Budapest_2024_BOT_fastest.parquet  Budapest_2024_HAM_fastest.parquet  Budapest_2024_HUL_fastest.parquet  Budapest_2024_LEC_fastest.parquet  Budapest_2024_MAG_fastest.parquet  (+264 more)
models/: tyre_deg_model.pkl
tests/: conftest.py  test_ingest.py  test_process.py  test_train.py
